starting to add adj surface features

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 explore using MRS
 adapt MRS code and parse data
 
+
+
 Feature ideas
 bi-, trigrams
 POS tags (alone and appended) ngrams
@@ -17,10 +19,10 @@ semantic role labeling
 sentiment backoff (use sentistrength)
 expansion
 stemming
-positional
+positional - relative to other aspects or adjective or clue word or start of sentence
 
 DEEP:
-tree based
+tree based - position relative to root?
 
 
 
